workloads/routing/image/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: image-vs
  namespace: image
spec:
  hosts:
  - api.growbin.app
  gateways:
  - istio-system/eco2-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/image
    route:
    - destination:
        host: image-api.image.svc.cluster.local
        port:
          number: 8000
